--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -267,7 +267,7 @@ html.dark-theme {
   --body-font-light-color: #abacaf;
   --body-font-dark-color: #cecfd1;
   --link-font-color: #0094FF;
-  --link_hover-font-color: #003262;
+  --link_hover-font-color: #e5e5e5;
   --scrollbar-thumb-color: #5f5f5f;
   --mark-background-color: #fdb515;
   --selected-background-color: #e5e5e5;
@@ -345,4 +345,5 @@ html.dark-theme .home-link {
 html.dark-theme .home-link:hover,
 html.dark-theme .home-link.is-current {
   background: url(../img/home-dark.svg) no-repeat center;
+  color: #fafafa;
 }
